# zettel

./: .travis.yml  CHANGELOG.md  ExampleZettel.md  README.md  default.nix  stack-8.8.2.yaml  stack.nix  stack.yaml  zettel.cabal  zettel.md
.github/workflows/: ci.yml
app/: Main.hs
nix/: sources.json
src/: Lib.hs  Neo4JEffect.hs  PandocParse.hs  Types.hs
