cabal-version: 2.4
name: zettel
version: 0.0.0.0
license: MIT
license-file: LICENSE
copyright: 2020 Armando Santos
maintainer: Armando Santos <armandoifsantos@gmail.com>
author: Armando Santos
tested-with: ghc ==8.6.5 ghc ==8.8.2
homepage: https://github.com/bolt12/zettel
bug-reports: https://github.com/bolt12/zettel/issues
synopsis: Zettelkasten file processor
description:
    Zettelkasten file processor
category: Application
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/bolt12/zettel.git

library
    exposed-modules:
        Neo4JEffect
        PandocParse
        Types
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
    build-depends:
        base >=4.12.0.0 && <4.14,
        pandoc -any,
        polysemy -any,
        hasbolt -any,
        text -any,
        data-default -any,
        containers -any,
        unordered-containers -any,
        scientific -any,
        vector -any,
        aeson -any
    
    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints
        build-depends:
            pandoc -any,
            polysemy -any,
            hasbolt -any,
            text -any,
            data-default -any,
            containers -any,
            unordered-containers -any,
            scientific -any,
            vector -any,
            aeson -any
    
    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths
        build-depends:
            pandoc -any,
            polysemy -any,
            hasbolt -any,
            text -any,
            data-default -any,
            containers -any,
            unordered-containers -any,
            scientific -any,
            vector -any,
            aeson -any
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields
        build-depends:
            pandoc -any,
            polysemy -any,
            hasbolt -any,
            text -any,
            data-default -any,
            containers -any,
            unordered-containers -any,
            scientific -any,
            vector -any,
            aeson -any
    
    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies
        build-depends:
            pandoc -any,
            polysemy -any,
            hasbolt -any,
            text -any,
            data-default -any,
            containers -any,
            unordered-containers -any,
            scientific -any,
            vector -any,
            aeson -any

executable zettel
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
    build-depends:
        base >=4.12.0.0 && <4.14,
        zettel -any,
        polysemy -any,
        hasbolt -any,
        pandoc -any,
        optparse-generic -any,
        editor-open -any,
        bytestring -any,
        time -any,
        directory -any,
        text -any
    
    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints
        build-depends:
            zettel -any,
            polysemy -any,
            hasbolt -any,
            pandoc -any,
            optparse-generic -any,
            editor-open -any,
            bytestring -any,
            time -any,
            directory -any,
            text -any
    
    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths
        build-depends:
            zettel -any,
            polysemy -any,
            hasbolt -any,
            pandoc -any,
            optparse-generic -any,
            editor-open -any,
            bytestring -any,
            time -any,
            directory -any,
            text -any
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields
        build-depends:
            zettel -any,
            polysemy -any,
            hasbolt -any,
            pandoc -any,
            optparse-generic -any,
            editor-open -any,
            bytestring -any,
            time -any,
            directory -any,
            text -any
    
    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies
        build-depends:
            zettel -any,
            polysemy -any,
            hasbolt -any,
            pandoc -any,
            optparse-generic -any,
            editor-open -any,
            bytestring -any,
            time -any,
            directory -any,
            text -any
