cabal-version:       3.0
name:                zettel
version:             1.0.0.0
synopsis:            Zettelkasten file processor
description:         Zettelkasten file processor
license:             MIT
license-file:        LICENSE
author:              Armando Santos
maintainer:          Armando Santos <armandoifsantos@gmail.com>
copyright:           2020 Armando Santos
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5 GHC == 8.8.2

common common-options
  build-depends:       base ^>=4.12.0,
                       polysemy,
                       polysemy-plugin,
                       hasbolt,
                       pandoc,
                       optparse-generic,
                       editor-open,
                       bytestring,
                       time,
                       directory,
                       text,
                       data-default,
                       containers,
                       unordered-containers,
                       scientific,
                       vector,
                       aeson,
                       pretty-simple

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -fplugin=Polysemy.Plugin
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable zettel
  import:              common-options
  hs-source-dirs:      app,
                       src
  main-is:             Main.hs
  other-modules:       Neo4JEffect
                       PandocParse
                       Types

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
